Update contact email address

--- a/index.html
+++ b/index.html
@@ -464,8 +464,7 @@
                                 <i class="fas fa-envelope"></i>
                                 <div>
                                     <h4>Email</h4>
-                                    <!-- TODO: Replace with your real email address -->
-                                    <a href="mailto:hello@harijaiswal.com">hello@harijaiswal.com</a>
+                                    <a href="mailto:hari.jaiswal.india@gmail.com">hari.jaiswal.india@gmail.com</a>
                                 </div>
                             </div>
                             <div class="contact-item">
